--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,96 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Abhishek Shah
     - name: Date of Birth
-      value: 14th March 1879
+      value: 29th November 1990
     - name: Languages
-      value: English, German
+      value: English, Marathi, Hindi, and Gujarati
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: Diploma in IOT and Smart Analytics
+      institution: Indian International Institue of Technology, Hyderabad, TL, India
+      year: 2021
       description:
         - Description 1.
         - Description 2.
-        - title: Description 3.
+    - title: Post Graduate Diploma in Mobile Computing
+      institution: CDAC ACTS, Pune, MH, India
+      year: 2013
+      description:
+        - Learned all about mobile application development for iOS and Android
+        - Learned about operating system fundamentals and core system basics
+        - title: Projects
           contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
+            - Built a remote camera viewer for iOS and Android
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Senior Manager - Engineering
+      company: Phoenix Group - Xcaliber Infotech Private Limited
+      year: 2016-Present
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - Engineered seamless convergence of software, robotics, and electronics to design cutting-edge solutions for in-house product line.
+        - Propelled architectural decisions, revolutionizing existing solutions and amplifying product performance.
+        - Led development of pioneering Warehouse Management System (WMS) for US-based facility, enhancing operational efficiency.
+        - Spearheaded R&D initiatives, ensuring timely roll-out of next-gen products and elevating user experiences.
+        - Strategically improved production line efficiency through process enhancements.
+
+    - title: Assistant Manager - iOS Developmer
+      company: Reliance JIO Infocomm Pvt. Ltd., Mumbai
+      year: 2015-2016
       description:
-        - Description 1.
-        - Description 2.
+        - Developed complex iOS applications, showcasing expertise in Swift and contributing to the company's major product launch.
+        - Managed a critical project focused on documenting user data through image processing SDKs, ensuring compliance with data privacy regulations.
+        - Collaborated across departments to ensure seamless product integration and smooth workflows.
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+    - title: Junior Software Developer
+      company: Xcaliber Technologies, Pune
+      year: 2013-2015
       description:
+        - Developed robust iOS applications for enterprise and third-party products using Objective-C, exhibiting strong problem-solving skills and coding expertise.
+        - Drove innovation in research and development projects, including creating Linux machine drivers and interfaces for iOS devices, expanding company capabilities.
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+    - title: Product Partner, Technical Lead
+      company: Indian Silicon Technologies, Pune
+      year: 2013-2014
+      description:
+        - Led end-to-end development of a sophisticated home automation solution, from backend architecture (NodeJS, MongoDB) to iOS application interfacing.
+        - Transformed the company's capabilities by leveraging technical leadership and expert problem-solving skills, delivering a comprehensive and impactful product.
+# - title: Open Source Projects
+#   type: time_table
+#   contents:
+#     - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
+#       year: 2015-now
+#       description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
 
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+# - title: Honors and Awards
+#   type: time_table
+#   contents:
+#     - year: 1921
+#       items:
+#         - Nobel Prize in Physics
+#         - Matteucci Medal
+#     - year: 2029
+#       items:
+#         - Max Planck Medal
 
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
-      items: 
-        - Max Planck Medal
+# - title: Academic Interests
+#   type: nested_list
+#   contents:
+#     - title: Topic 1.
+#       items:
+#         - Description 1.
+#         - Description 2.
+#     - title: Topic 2.
+#       items:
+#         - Description 1.
+#         - Description 2.
 
-- title: Academic Interests
-  type: nested_list
-  contents:
-    - title: Topic 1.
-      items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
-
-- title: Other Interests
-  type: list
-  contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+# - title: Other Interests
+#   type: list
+#   contents:
+#     - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
